--- a/style.css
+++ b/style.css
@@ -13,6 +13,15 @@ p {
     color: #bbb;
 }
 
+a {
+    color: teal;
+    text-decoration: none; 
+}
+
+a:visited {
+    color: teal;
+}
+
 canvas {
     padding-left: 0;
     padding-right: 0;
